wait it's that simple fix overflow skills section by deleting height css

--- a/css/styles.css
+++ b/css/styles.css
@@ -229,7 +229,6 @@ h2 {
 .skills {
   /* margin-top: 200px; */
   background-color: #1e2023;
-  height: 720px;
 }
 
 .skill-header {
